@@ -8,6 +8,7 @@
 package io.camunda.exporter;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
+import com.google.common.collect.ImmutableSet;
 import io.camunda.exporter.cache.ExporterEntityCacheProvider;
 import io.camunda.exporter.cache.form.CachedFormEntity;
 import io.camunda.exporter.config.ConnectionTypes;
@@ -15,6 +16,7 @@ import io.camunda.exporter.config.ExporterConfiguration;
 import io.camunda.exporter.errorhandling.Error;
 import io.camunda.exporter.errorhandling.ErrorHandler;
 import io.camunda.exporter.errorhandling.ErrorHandlers;
+import io.camunda.exporter.handlers.AuditLogHandler;
 import io.camunda.exporter.handlers.AuthorizationCreatedUpdatedHandler;
 import io.camunda.exporter.handlers.AuthorizationDeletedHandler;
 import io.camunda.exporter.handlers.ClusterVariableCreatedHandler;
@@ -35,6 +37,7 @@ import io.camunda.exporter.handlers.GroupEntityAddedHandler;
 import io.camunda.exporter.handlers.GroupEntityRemovedHandler;
 import io.camunda.exporter.handlers.HistoryDeletionDeletedHandler;
 import io.camunda.exporter.handlers.IncidentHandler;
+import io.camunda.exporter.handlers.JobBatchMetricsExportedHandler;
 import io.camunda.exporter.handlers.JobHandler;
 import io.camunda.exporter.handlers.ListViewFlowNodeFromIncidentHandler;
 import io.camunda.exporter.handlers.ListViewFlowNodeFromJobHandler;
@@ -66,19 +69,14 @@ import io.camunda.exporter.handlers.UserTaskJobBasedHandler;
 import io.camunda.exporter.handlers.UserTaskProcessInstanceHandler;
 import io.camunda.exporter.handlers.UserTaskVariableHandler;
 import io.camunda.exporter.handlers.VariableHandler;
-import io.camunda.exporter.handlers.auditlog.AuditLogHandler;
-import io.camunda.exporter.handlers.auditlog.BatchOperationCreationAuditLogTransformer;
-import io.camunda.exporter.handlers.auditlog.BatchOperationLifecycleManagementAuditLogTransformer;
-import io.camunda.exporter.handlers.auditlog.DecisionEvaluationAuditLogTransformer;
-import io.camunda.exporter.handlers.auditlog.ProcessInstanceCreationAuditLogTransformer;
-import io.camunda.exporter.handlers.auditlog.ProcessInstanceMigrationAuditLogTransformer;
-import io.camunda.exporter.handlers.auditlog.ProcessInstanceModificationAuditLogTransformer;
 import io.camunda.exporter.handlers.batchoperation.BatchOperationChunkCreatedHandler;
 import io.camunda.exporter.handlers.batchoperation.BatchOperationChunkCreatedItemHandler;
 import io.camunda.exporter.handlers.batchoperation.BatchOperationCreatedHandler;
 import io.camunda.exporter.handlers.batchoperation.BatchOperationInitializedHandler;
 import io.camunda.exporter.handlers.batchoperation.BatchOperationLifecycleManagementHandler;
+import io.camunda.exporter.handlers.batchoperation.ProcessDefinitionHistoryDeletionOperationHandler;
 import io.camunda.exporter.handlers.batchoperation.ProcessInstanceCancellationOperationHandler;
+import io.camunda.exporter.handlers.batchoperation.ProcessInstanceHistoryDeletionOperationHandler;
 import io.camunda.exporter.handlers.batchoperation.ProcessInstanceMigrationOperationHandler;
 import io.camunda.exporter.handlers.batchoperation.ProcessInstanceModificationOperationHandler;
 import io.camunda.exporter.handlers.batchoperation.ResolveIncidentOperationHandler;
@@ -87,6 +85,7 @@ import io.camunda.exporter.handlers.batchoperation.listview.ListViewFromIncident
 import io.camunda.exporter.handlers.batchoperation.listview.ListViewFromProcessInstanceCancellationOperationHandler;
 import io.camunda.exporter.handlers.batchoperation.listview.ListViewFromProcessInstanceMigrationOperationHandler;
 import io.camunda.exporter.handlers.batchoperation.listview.ListViewFromProcessInstanceModificationOperationHandler;
+import io.camunda.exporter.handlers.operation.OperationFromHistoryDeletionHandler;
 import io.camunda.exporter.handlers.operation.OperationFromIncidentHandler;
 import io.camunda.exporter.handlers.operation.OperationFromProcessInstanceHandler;
 import io.camunda.exporter.handlers.operation.OperationFromVariableDocumentHandler;
@@ -111,6 +110,7 @@ import io.camunda.webapps.schema.descriptors.template.CorrelatedMessageSubscript
 import io.camunda.webapps.schema.descriptors.template.DecisionInstanceTemplate;
 import io.camunda.webapps.schema.descriptors.template.FlowNodeInstanceTemplate;
 import io.camunda.webapps.schema.descriptors.template.IncidentTemplate;
+import io.camunda.webapps.schema.descriptors.template.JobMetricsBatchTemplate;
 import io.camunda.webapps.schema.descriptors.template.JobTemplate;
 import io.camunda.webapps.schema.descriptors.template.ListViewTemplate;
 import io.camunda.webapps.schema.descriptors.template.MessageSubscriptionTemplate;
@@ -122,17 +122,41 @@ import io.camunda.webapps.schema.descriptors.template.TaskTemplate;
 import io.camunda.webapps.schema.descriptors.template.UsageMetricTUTemplate;
 import io.camunda.webapps.schema.descriptors.template.UsageMetricTemplate;
 import io.camunda.webapps.schema.descriptors.template.VariableTemplate;
+import io.camunda.zeebe.exporter.api.context.Context;
 import io.camunda.zeebe.exporter.common.auditlog.AuditLogConfiguration;
+import io.camunda.zeebe.exporter.common.auditlog.transformers.AuthorizationAuditLogTransformer;
+import io.camunda.zeebe.exporter.common.auditlog.transformers.BatchOperationCreationAuditLogTransformer;
+import io.camunda.zeebe.exporter.common.auditlog.transformers.BatchOperationLifecycleManagementAuditLogTransformer;
+import io.camunda.zeebe.exporter.common.auditlog.transformers.DecisionAuditLogTransformer;
+import io.camunda.zeebe.exporter.common.auditlog.transformers.DecisionEvaluationAuditLogTransformer;
+import io.camunda.zeebe.exporter.common.auditlog.transformers.DecisionRequirementsRecordAuditLogTransformer;
+import io.camunda.zeebe.exporter.common.auditlog.transformers.FormAuditLogTransformer;
+import io.camunda.zeebe.exporter.common.auditlog.transformers.GroupAuditLogTransformer;
+import io.camunda.zeebe.exporter.common.auditlog.transformers.GroupEntityAuditLogTransformer;
+import io.camunda.zeebe.exporter.common.auditlog.transformers.IncidentResolutionAuditLogTransformer;
+import io.camunda.zeebe.exporter.common.auditlog.transformers.MappingRuleAuditLogTransformer;
+import io.camunda.zeebe.exporter.common.auditlog.transformers.ProcessAuditLogTransformer;
+import io.camunda.zeebe.exporter.common.auditlog.transformers.ProcessInstanceCancelAuditLogTransformer;
+import io.camunda.zeebe.exporter.common.auditlog.transformers.ProcessInstanceCreationAuditLogTransformer;
+import io.camunda.zeebe.exporter.common.auditlog.transformers.ProcessInstanceMigrationAuditLogTransformer;
+import io.camunda.zeebe.exporter.common.auditlog.transformers.ProcessInstanceModificationAuditLogTransformer;
+import io.camunda.zeebe.exporter.common.auditlog.transformers.ResourceAuditLogTransformer;
+import io.camunda.zeebe.exporter.common.auditlog.transformers.RoleAuditLogTransformer;
+import io.camunda.zeebe.exporter.common.auditlog.transformers.RoleEntityAuditLogTransformer;
+import io.camunda.zeebe.exporter.common.auditlog.transformers.TenantAuditLogTransformer;
+import io.camunda.zeebe.exporter.common.auditlog.transformers.TenantEntityAuditLogTransformer;
+import io.camunda.zeebe.exporter.common.auditlog.transformers.UserAuditLogTransformer;
+import io.camunda.zeebe.exporter.common.auditlog.transformers.UserTaskAuditLogTransformer;
+import io.camunda.zeebe.exporter.common.auditlog.transformers.VariableAddUpdateAuditLogTransformer;
 import io.camunda.zeebe.exporter.common.cache.ExporterEntityCacheImpl;
 import io.camunda.zeebe.exporter.common.cache.batchoperation.CachedBatchOperationEntity;
 import io.camunda.zeebe.exporter.common.cache.decisionRequirements.CachedDecisionRequirementsEntity;
 import io.camunda.zeebe.exporter.common.cache.process.CachedProcessEntity;
 import io.camunda.zeebe.util.VisibleForTesting;
 import io.camunda.zeebe.util.cache.CaffeineCacheStatsCounter;
-import io.micrometer.core.instrument.MeterRegistry;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.HashSet;
+import java.util.LinkedHashSet;
 import java.util.Map;
 import java.util.Set;
 import java.util.function.BiConsumer;
@@ -143,6 +167,9 @@ import java.util.function.BiConsumer;
  */
 public class DefaultExporterResourceProvider implements ExporterResourceProvider {
   public static final String NAMESPACE = "zeebe.camunda.exporter.cache";
+
+  /** The partition on which all process deployments and identity entities are published */
+  public static final int PROCESS_DEFINITION_PARTITION = 1;
 
   private IndexDescriptors indexDescriptors;
   private Set<ExportHandler<?, ?>> exportHandlers;
@@ -156,13 +183,15 @@ public class DefaultExporterResourceProvider implements ExporterResourceProvider
   public void init(
       final ExporterConfiguration configuration,
       final ExporterEntityCacheProvider entityCacheProvider,
-      final MeterRegistry meterRegistry,
+      final Context context,
       final ExporterMetadata exporterMetadata,
       final ObjectMapper objectMapper) {
     final var globalPrefix = configuration.getConnect().getIndexPrefix();
     final var isElasticsearch =
         ConnectionTypes.isElasticSearch(configuration.getConnect().getType());
     indexDescriptors = new IndexDescriptors(globalPrefix, isElasticsearch);
+    final var meterRegistry = context.getMeterRegistry();
+    final var partitionId = context.getPartitionId();
 
     batchOperationCache =
         new ExporterEntityCacheImpl<>(
@@ -192,9 +221,9 @@ public class DefaultExporterResourceProvider implements ExporterResourceProvider
                 indexDescriptors.get(FormIndex.class).getFullQualifiedName()),
             new CaffeineCacheStatsCounter(NAMESPACE, "form", meterRegistry));
 
-    exportHandlers = new HashSet<>();
+    exportHandlers = new LinkedHashSet<>();
     exportHandlers.addAll(
-        Set.of(
+        ImmutableSet.of(
             new RoleCreateUpdateHandler(
                 indexDescriptors.get(RoleIndex.class).getFullQualifiedName()),
             new RoleDeletedHandler(indexDescriptors.get(RoleIndex.class).getFullQualifiedName()),
@@ -299,6 +328,8 @@ public class DefaultExporterResourceProvider implements ExporterResourceProvider
                 indexDescriptors.get(OperationTemplate.class).getFullQualifiedName()),
             new OperationFromIncidentHandler(
                 indexDescriptors.get(OperationTemplate.class).getFullQualifiedName()),
+            new OperationFromHistoryDeletionHandler(
+                indexDescriptors.get(OperationTemplate.class).getFullQualifiedName()),
             new MappingRuleCreatedUpdatedHandler(
                 indexDescriptors.get(MappingRuleIndex.class).getFullQualifiedName()),
             new MappingRuleDeletedHandler(
@@ -328,6 +359,12 @@ public class DefaultExporterResourceProvider implements ExporterResourceProvider
             new ResolveIncidentOperationHandler(
                 indexDescriptors.get(OperationTemplate.class).getFullQualifiedName(),
                 batchOperationCache),
+            new ProcessInstanceHistoryDeletionOperationHandler(
+                indexDescriptors.get(OperationTemplate.class).getFullQualifiedName(),
+                batchOperationCache),
+            new ProcessDefinitionHistoryDeletionOperationHandler(
+                indexDescriptors.get(OperationTemplate.class).getFullQualifiedName(),
+                batchOperationCache),
             new ListViewFromProcessInstanceCancellationOperationHandler(
                 indexDescriptors.get(ListViewTemplate.class).getFullQualifiedName(),
                 batchOperationCache),
@@ -343,6 +380,8 @@ public class DefaultExporterResourceProvider implements ExporterResourceProvider
             new UsageMetricExportedHandler(
                 indexDescriptors.get(UsageMetricTemplate.class).getFullQualifiedName(),
                 indexDescriptors.get(UsageMetricTUTemplate.class).getFullQualifiedName()),
+            new JobBatchMetricsExportedHandler(
+                indexDescriptors.get(JobMetricsBatchTemplate.class).getFullQualifiedName()),
             new CorrelatedMessageSubscriptionFromMessageStartEventSubscriptionHandler(
                 indexDescriptors
                     .get(CorrelatedMessageSubscriptionTemplate.class)
@@ -351,7 +390,10 @@ public class DefaultExporterResourceProvider implements ExporterResourceProvider
                 indexDescriptors
                     .get(CorrelatedMessageSubscriptionTemplate.class)
                     .getFullQualifiedName())));
-    addAuditLogHandlers(new AuditLogConfiguration());
+
+    if (configuration.getAuditLog().isEnabled()) {
+      addAuditLogHandlers(configuration.getAuditLog(), partitionId);
+    }
 
     if (configuration.getBatchOperation().isExportItemsOnCreation()) {
       // only add this handler when the items are exported on creation
@@ -418,6 +460,11 @@ public class DefaultExporterResourceProvider implements ExporterResourceProvider
   }
 
   @Override
+  public <T extends IndexDescriptor> T getIndexDescriptor(final Class<T> descriptorClass) {
+    return indexDescriptors.get(descriptorClass);
+  }
+
+  @Override
   public Set<ExportHandler<?, ?>> getExportHandlers() {
     // Register all handlers here
     return Collections.unmodifiableSet(exportHandlers);
@@ -446,19 +493,40 @@ public class DefaultExporterResourceProvider implements ExporterResourceProvider
     return formCache;
   }
 
-  private void addAuditLogHandlers(final AuditLogConfiguration auditLog) {
-    if (auditLog.isEnabled()) {
-      final var indexName = (indexDescriptors.get(AuditLogTemplate.class).getFullQualifiedName());
+  private void addAuditLogHandlers(final AuditLogConfiguration auditLog, final int partitionId) {
+    final var indexName = (indexDescriptors.get(AuditLogTemplate.class).getFullQualifiedName());
+    final var auditLogBuilder = AuditLogHandler.builder(indexName, auditLog);
 
-      AuditLogHandler.builder(indexName, auditLog)
+    if (partitionId == PROCESS_DEFINITION_PARTITION) {
+      auditLogBuilder
+          .addHandler(new AuthorizationAuditLogTransformer())
           .addHandler(new BatchOperationCreationAuditLogTransformer())
-          .addHandler(new BatchOperationLifecycleManagementAuditLogTransformer())
-          .addHandler(new DecisionEvaluationAuditLogTransformer())
-          .addHandler(new ProcessInstanceCreationAuditLogTransformer())
-          .addHandler(new ProcessInstanceMigrationAuditLogTransformer())
-          .addHandler(new ProcessInstanceModificationAuditLogTransformer())
-          .build()
-          .forEach(exportHandlers::add);
+          .addHandler(new DecisionRequirementsRecordAuditLogTransformer())
+          .addHandler(new DecisionAuditLogTransformer())
+          .addHandler(new FormAuditLogTransformer())
+          .addHandler(new GroupAuditLogTransformer())
+          .addHandler(new GroupEntityAuditLogTransformer())
+          .addHandler(new MappingRuleAuditLogTransformer())
+          .addHandler(new ProcessAuditLogTransformer())
+          .addHandler(new ResourceAuditLogTransformer())
+          .addHandler(new RoleAuditLogTransformer())
+          .addHandler(new RoleEntityAuditLogTransformer())
+          .addHandler(new TenantAuditLogTransformer())
+          .addHandler(new TenantEntityAuditLogTransformer())
+          .addHandler(new UserAuditLogTransformer());
     }
+
+    auditLogBuilder
+        .addHandler(new BatchOperationLifecycleManagementAuditLogTransformer())
+        .addHandler(new DecisionEvaluationAuditLogTransformer())
+        .addHandler(new IncidentResolutionAuditLogTransformer())
+        .addHandler(new ProcessInstanceCancelAuditLogTransformer())
+        .addHandler(new ProcessInstanceCreationAuditLogTransformer())
+        .addHandler(new ProcessInstanceMigrationAuditLogTransformer())
+        .addHandler(new ProcessInstanceModificationAuditLogTransformer())
+        .addHandler(new UserTaskAuditLogTransformer())
+        .addHandler(new VariableAddUpdateAuditLogTransformer())
+        .build()
+        .forEach(exportHandlers::add);
   }
 }
